/* AUTO-GENERATED FILE. DO NOT MODIFY.
 */
syntax = "proto2";

package bna.rpc;

import "google/protobuf/descriptor.proto";

option java_multiple_files = true;

extend .google.protobuf.ServiceOptions {
  optional .bna.rpc.ServiceId_Enum service_id = 21000;
  optional bool all_deferred_response = 21003;
  optional string ts_service_alias = 21004;
}

extend .google.protobuf.MethodOptions {
  optional uint32 method_id = 21000;
  optional bool event_emitter = 21001;
  optional bool deferred_response = 21003;
  optional bool no_log = 21004;
  optional string event_name = 21005;
  optional bool ts_method_hidden = 21006;
}

extend .google.protobuf.MessageOptions {
  optional bool use_sparse_messages = 21000;
  optional bool ts_skip = 21001;
  optional bool ts_fields_optional = 21002;
  optional string ts_extends = 21003;
}

extend .google.protobuf.FileOptions {
  optional bool all_sparse_messages = 21000;
  optional bool json_conversions = 21001;
}

extend .google.protobuf.FieldOptions {
  optional bool json_string = 21000;
  optional bool ts_optional = 21001;
  optional string ts_type = 21002;
  optional bool ts_skip_field = 21003;
  optional string ts_enum_type = 21004;
}

extend .google.protobuf.EnumOptions {
  optional string ts_value_name_prefix = 21000;
  optional string ts_enum_name = 21001;
}

extend .google.protobuf.EnumValueOptions {
  optional string ts_value_name = 21000;
}

enum ErrorCode {
  ERROR_OK = 0;
  ERROR_SERVICE_ID_NOT_FOUND = 1;
  ERROR_METHOD_ID_NOT_FOUND = 2;
  ERROR_RPC_CALL_CANCELED = 3;
  ERROR_UNHANDLED_EXCEPTION_ = 4;
  ERROR_SERVICE_ID_NOT_GRANTED = 5;
}

enum ServiceId_Enum {
  ServiceId_RouterService = 0;
  ServiceId_ApplicationService = 1;
  ServiceId_BrowserService = 2;
  ServiceId_PlayScreenService = 3;
  ServiceId_FriendsService = 4;
  ServiceId_ChatService = 6;
  ServiceId_ShopService = 7;
  ServiceId_LoginService = 9;
  ServiceId_RegionSelectorService = 10;
  ServiceId_ProfileService = 11;
  ServiceId_SocialService = 12;
  ServiceId_GamesService = 13;
  ServiceId_NotificationService = 14;
  ServiceId_MainWindowService = 15;
  ServiceId_CrossBrowserService = 16;
}

message NoData {
}

message StatusResult {
  optional int32 error_code = 1;
  optional string error_message = 2;
}

message RpcMessage {
  optional uint32 service_id = 1;
  optional uint32 method_id = 2;
  optional uint32 sequence_id = 3;
  optional bytes payload = 4;
  optional int32 error_code = 5;
  optional string error_message = 6;
}

message ResponseMessage {
  optional uint32 serviceId = 1;
  optional uint32 methodId = 2;
  optional bytes payload = 3;
}

message ResponseError {
  optional uint32 code = 1;
  optional string message = 2;
}
